# payments

./: NOTICE  README.md
.github/workflows/: mpp-evm.yml  rust.yml
go/: CHANGELOG.md  CLIENT.md  CONTRIBUTING.md  FACILITATOR.md  Makefile  README.md  SELLER.md  SERVER.md  client.go  client_test.go  facilitator.go  facilitator_hooks_test.go  facilitator_test.go  go.mod  go.sum  interfaces.go  server.go  server_hooks_test.go  server_test.go  types.go
go/.changes/: 1.0.0.md  2.0.0.md  2.1.0.md  2.2.0.md  2.4.1.md  unreleased.md  v2.3.0.md  v2.4.0.md
go/.changes/unreleased/: added-20260303-121913.yaml  added-20260303-144745.yaml  fixed-20260324-164854.yaml  mezo-testnet-default-asset.yaml  stable-support.yaml
go/.changeset/: facilitator-response-errors.md  go-erc20-approval-gas-sponsoring.md
go/demo/okx-server/: main.go
go/extensions/: README.md
go/extensions/bazaar/: bazaar_test.go  doc.go  facilitator.go  facilitator_client.go  facilitator_client_test.go  resource_service.go  server.go  types.go
go/extensions/eip2612gassponsor/: server.go  types.go
go/extensions/erc20approvalgassponsor/: extract_test.go  resolve_signer_test.go  types.go
go/extensions/paymentidentifier/: facilitator.go  paymentidentifier_test.go  schema.go  server.go  types.go
go/extensions/types/: types.go
go/extensions/v1/: facilitator.go
go/http/: client.go  client_test.go  dynamic_test.go  facilitator_client.go  facilitator_client_test.go  http.go  okx_auth.go  okx_facilitator_client.go  paywall.go  paywall_test.go  server.go  server_extensions_test.go  server_test.go  svm_paywall_template.go
go/http/echo/: README.md  builder.go  middleware.go  middleware_test.go
go/http/gin/: README.md  builder.go  middleware.go  middleware_test.go
go/http/nethttp/: adapter.go  builder.go  context.go  middleware.go  middleware_test.go
go/legacy/: README.md  go.mod
go/mcp/: CHANGELOG.md  README.md  client.go  client_test.go  doc.go  server.go  server_test.go  types.go  utils.go  utils_test.go
go/mechanisms/evm/: README.md  multicall.go  utils.go  verify_universal_test.go
go/mechanisms/svm/: README.md
go/signers/: README.md
go/signers/evm/: README.md  client.go  client_test.go  okx_signer.go  okx_signer_test.go
go/signers/svm/: README.md  client.go
go/test/integration/: core_test.go  evm_test.go  http_test.go  mcp_evm_test.go  svm_test.go
go/test/unit/: evm_client_facilitator_test.go  evm_eip712_test.go  evm_test.go  evm_types_test.go  evm_utils_test.go  evm_v1_utils_test.go  http_test.go  permit2_fixtures_test.go  svm_test.go
go/x402/: .changie.yaml  CLIENT.md  CONTRIBUTING.md  FACILITATOR.md  Makefile  README.md  SELLER.md  SERVER.md  client.go  client_test.go  constants.go  facilitator.go  facilitator_hooks_test.go  facilitator_test.go  go.mod  interfaces.go  server.go  server_hooks_test.go  server_test.go  types.go
go/x402/extensions/: README.md
go/x402/http/: client.go  client_test.go  dynamic_test.go  evm_paywall_template.go  facilitator_client.go  facilitator_client_test.go  http.go  okx_auth_test.go  (+7 more)
java/: ARCHITECTURE.md  CONFIG.md  INTEGRATION.md  README.md  SELLER.md  checkstyle-suppressions.xml  checkstyle.xml  pom.xml  spotbugs-exclude.xml
java/core/: pom.xml
java/examples/: DemoClient.java  DemoServer.java  README.md
java/jakarta/: pom.xml
java/javax/: pom.xml
rust/: Cargo.toml  README.md  SELLER.md
rust/.claude/: settings.local.json
rust/examples/: Cargo.toml
rust/examples/src/: basic_server.rs  custom_config.rs  lib.rs  test_connectivity.rs
rust/mpp/: Cargo.toml  README.md
rust/mpp/examples/: Cargo.toml
rust/mpp/examples/src/: dual_protocol_server.rs  mpp_photo_server.rs  mpp_photo_split_server.rs  mpp_session_server.rs
rust/mpp/src/: axum.rs  challenger.rs  charge_method.rs  credential_ext.rs  error.rs  handlers.rs  lib.rs  mock.rs  nonce.rs  sa_client.rs  session_method.rs  store.rs  types.rs
rust/mpp/src/charge/: challenge.rs  challenger.rs  method.rs  mod.rs
rust/mpp/src/eip712/: authorization.rs  domain.rs  mod.rs  voucher.rs
rust/mpp/src/session_method/: decode.rs  handlers.rs  mod.rs  trait_impl.rs
rust/mpp/tests/: sandbox.rs  wiremock_session.rs
rust/payment-router-axum/: Cargo.toml  README.md
rust/payment-router-axum/src/: adapter.rs  detector.rs  layer.rs  lib.rs  merger.rs  router.rs  types.rs
rust/payment-router-axum/src/adapters/: mod.rs  mpp.rs  x402.rs
rust/payment-router-axum/tests/: conformance.rs
rust/x402/: README.md  SELLER.md
rust/x402-axum/: Cargo.toml
rust/x402-axum/src/: adapter.rs  lib.rs  middleware.rs
rust/x402-axum/tests/: middleware_test.rs
rust/x402-core/src/: utils.rs
rust/x402-core/src/facilitator/: x402_facilitator.rs
rust/x402-core/src/http/: hmac.rs  http_facilitator_client.rs  x402_http_resource_server.rs
rust/x402-core/src/schemas/: mod.rs
rust/x402-core/src/server/: x402_resource_server.rs
rust/x402-core/src/types/: mechanisms.rs
rust/x402-core/tests/: facilitator_client_test.rs
rust/x402-evm/src/: constants.rs  types.rs
rust/x402-evm/src/aggr_deferred/: server_scheme.rs
rust/x402-evm/src/exact/: mod.rs  server_scheme.rs
rust/x402/examples/: Cargo.toml
rust/x402/examples/src/: basic_server.rs  custom_config.rs  test_connectivity.rs
rust/x402/x402-axum/: Cargo.toml  README.md
rust/x402/x402-axum/src/: adapter.rs  middleware.rs
rust/x402/x402-axum/tests/: middleware_test.rs
rust/x402/x402-core/: Cargo.toml  README.md
rust/x402/x402-core/src/: error.rs  lib.rs
rust/x402/x402-core/src/facilitator/: mod.rs
rust/x402/x402-core/src/http/: hmac.rs  http_facilitator_client.rs  mod.rs  x402_http_resource_server.rs
rust/x402/x402-core/src/server/: mod.rs  x402_resource_server.rs
rust/x402/x402-core/src/types/: extensions.rs  facilitator.rs  mechanisms.rs  mod.rs  payments.rs
rust/x402/x402-core/tests/: facilitator_client_test.rs
rust/x402/x402-evm/: Cargo.toml  README.md
rust/x402/x402-evm/src/: lib.rs
rust/x402/x402-evm/src/aggr_deferred/: mod.rs  server_scheme.rs
rust/x402/x402-evm/src/exact/: server_scheme.rs
typescript/: SELLER.md
(+244 files in other folders)
