[workspace]
resolver = "2"
members = [
    "x402-core",
    "x402-axum",
    "x402-evm",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/okx/payments"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "native-tls"] }

axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-service = "0.3"
http = "1"
http-body-util = "0.1"

# Crypto
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Error handling
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Testing
wiremock = "0.6"
