[package]
name = "mpp-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MPP EVM integration for OKX Payments SDK"

[features]
default = []
# Enables `MockSaApiClient` for local development and examples. DO NOT enable in
# production dependency chains — mock always returns success, no signature / SA
# API validation.
mock = []
# Enables drop-in Axum handlers for /session/settle and /session/status. Enable
# when you want to use the ready-made endpoints without writing your own.
handlers = []

[dev-dependencies]
wiremock = { workspace = true }

[dependencies]
# MPP protocol (core traits + EVM types, no Tempo)
mpp = { git = "https://github.com/tempoxyz/mpp-rs", features = ["server", "evm", "tower", "axum"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP (SA API calls)
reqwest.workspace = true

# Auth (OKX HMAC signing)
hmac.workspace = true
sha2.workspace = true
base64.workspace = true

# Time
chrono.workspace = true
time.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# EIP-712 signing & verification
# 版本与 mpp-rs 间接拉入的版本严格对齐(子 crate v1.5.7,signer crate v2.0.1)。
# 用 = 锁版本,避免出现两份不兼容的 alloy 共存。
alloy-primitives   = "=1.5.7"   # Address / B256 / U256 / Bytes
alloy-sol-types    = "=1.5.7"   # sol! / eip712_domain! / SolStruct
alloy-signer       = "=2.0.1"   # Signer trait + Signature
alloy-signer-local = "=2.0.1"   # PrivateKeySigner

# Nonce 生成(UUID v4 → U256)
uuid = { version = "1", features = ["v4"] }

# Tower
tower.workspace = true
tower-service.workspace = true
http.workspace = true
http-body-util.workspace = true
axum.workspace = true
